# arch-installer

./: README.md  pyproject.toml
examples/: sample-config.yaml
src/arch_installer/: __init__.py  __main__.py  disk.py  installer.py  locale.py  microcode.py  packages.py  swap.py  utils.py
src/arch_installer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/arch_installer/bootloader/: grub.py  systemd_boot.py
src/arch_installer/ui/: curses_ui.py  progress.py
tests/: test_disk.py  test_utils.py
