[project]
name = "arch-installer"
version = "1.0.0"
description = "Arch Linux installer with curses interface"
authors = [{name = "Mai Duong Long", email = "gtmailong@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.scripts]
arch-installer = "arch_installer.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
